@@ -37,7 +37,7 @@ Global
 	GlobalSection(MonoDevelopProperties) = preSolution
 		name = cumberland
 		version = 0.1
-		StartupItem = Cumberland.TileViewerTest\Cumberland.TileViewerTest.csproj
+		StartupItem = Cumberland.DrawMap\Cumberland.DrawMap.csproj
 		MonoDevelop.ChangeLogAddIn.ChangeLogInfo = $0
 		$0.policy = UpdateNearestChangeLog
 	EndGlobalSection
